Fix for overflow

--- a/beta-2/css/style.less
+++ b/beta-2/css/style.less
@@ -107,7 +107,7 @@ body {
     height: 30px;
     bottom: 0px;
     text-align: center;
-    z-index: 0;
+    z-index: 10;
     left: 0px;
 }
 
